# vamboo

./: .eslintrc.yaml  .gitignore  Cargo.toml  LICENSE  README.md  index.d.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
.circleci/: config.yml
.storybook/: config.js  webpack.config.js
compiler/: Cargo.toml
compiler/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs  package.rs
core/src/save/: serialization.rs
editor/: Cargo.toml  index.html  main.js  renderer.js
editor/src/: lib.rs  util.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/stream/: map.rs  mod.rs
src/: index.pug  index.ts  lib.rs  main.rs  main.ts  renderer.ts  stream.rs  style.styl
src/components/: MainComponent.ts  UnderConstruction.ts
src/components/App/: index.ts
src/components/Arrows/: index.ts  style.styl
src/components/BlockList/: BlockTabs.ts  FunctionBlockList.ts  GUIBlockList.ts  index.ts  style.styl  tab.styl
src/components/BlockList/FunctionBlockComponents/: LoggingBlockComponent.ts  MultiplyBlockComponent.ts  PlusBlockComponent.ts
src/components/BlockList/GUIBlockComponents/: LabelBlockComponent.ts  SliderBlockComponent.ts
src/components/BlockList/GUIBlockElements/: LabelBlockElement.ts  SliderBlockElement.ts
src/components/Button/: index.ts
src/components/Canvas/: index.ts  style.styl
src/components/Editor/: index.ts  style.styl
src/components/GUIElements/: SliderElement.ts
src/components/InputProperties/: index.ts  style.styl
src/components/InputProperty/: index.ts  style.styl
src/components/Label/: index.ts
src/components/OutputProperties/: index.ts  style.styl
src/components/OutputProperty/: index.ts
src/components/PlacedArrows/: index.ts
src/components/PlacedBlock/: index.ts  style.styl
src/components/PlacedBlocks/: index.ts  style.styl
src/components/Properties/: index.ts  style.styl
src/components/Slider/: index.ts
src/components/Toolbox/: index.ts  style.styl
src/components/UIVisibilityButton/: index.ts  style.styl
src/components/UnderConstruction/: index.ts  style.styl
src/editor/save/: serialization.rs
src/lib/: BlocksEnvironment.ts  Input.ts  Observable.ts  Observer.ts  Output.ts  Point.ts  Subscriber.ts  Subscription.ts  schema.ts
src/lib/blocks/: BaseBlock.ts  ButtonBlock.ts  ConstBlock.ts  DebugBlock.ts  LabelBlock.ts  LoggingBlock.ts  MergeBlock.ts  MultiplyBlock.ts  PlusBlock.ts  SliderBlock.ts  StateBlock.ts  SubtractBlock.ts
src/runtime/: mod.rs  vm.rs
src/runtime/stream/: lib.rs  map.rs
src/stores/: ArrowStore.ts  BaseStore.ts  BlockStore.ts  BlocksEnvironmentStore.ts  UIVisibilityStore.ts
src/stream/: lib.rs  map.rs
stories/: index.ts
test/: example.ts
test/lib/: BlocksEnvironment.ts  Observable.ts
test/lib/blocks/: BaseBlock.ts
types/react-hyperscript/: index.d.ts
