[package]
name = "compiler"
version = "0.1.0"
authors = ["tock203 <tick@tock.tech>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
core = { path = "../core" }
syn = "0.15"
quote = "0.6"
serde_json = "1"
uuid = { version = "0.7", features = ["serde", "v4"] }
petgraph = "0.4"
proc-macro2 = "0.4"
