[package]
name = "core"
version = "0.1.0"
authors = ["tock203 <tick@tock.tech>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
failure = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
petgraph = "0.4"
