[package]
name = "editor"
version = "0.1.0"
description = "A visual programming language for web frontend."
authors = ["tock203 <tick@tock.tech>"]
license = "MPL-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-pack = "0.6"

[dependencies]
wasm-bindgen = { version = "0.2", features = ["nightly"] }
maybe-owned = "0.3"
frappe = { git = "https://github.com/darkstalker/frappe", rev = "9e2e4ab500db428579977e80cb777d9d24a75785" }
frappe-dom = { git = "https://github.com/tock203/frappe-dom", rev = "251fa4f3a02472d6aa420f578b919d55ff9a30bd" }
maplit = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'Event',
  'EventTarget',
  'MouseEvent'
]

